# scribe

./: .gitignore  .gitmodules  BUILD.md  Cargo.toml  LICENSE
scribe/: pubspec.yaml
scribe/android/app/: build.gradle
scribe/android/app/src/main/: AndroidManifest.xml
scribe/lib/: main.dart  store.dart  store.g.dart  whisper.dart  whisper_generated.dart
scribe/macos/Runner/: Info.plist
scribe/macos/Runner.xcodeproj/: project.pbxproj
whisper/: Cargo.toml  build.rs  cbindgen.toml  types.h  warp2.h
whisper/src/: api.rs  dtrz.rs  lib.rs
